--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   />
   <script src="https://kit.fontawesome.com/2580602cf5.js" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link href="src/styles.css" />
+    <link rel="stylesheet" href="src/styles.css" />
   </head>
 
   <body>
